# Quake

./: CMakeLists.txt
WinQuake/: net_wins.c  net_wipx.c  snd_win.c
